--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="./service.html"
-                                >Service</a
+                                href="./services.html"
+                                >Services</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
@@ -653,9 +653,9 @@
                                     >Products</a
                                 >
                                 <a
-                                    href="./service.html"
+                                    href="./services.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Service</a
+                                    >Services</a
                                 >
                                 <a
                                     href="#about-us"
@@ -893,8 +893,8 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="./service.html"
-                                >Service</a
+                                href="./services.html"
+                                >Services</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
@@ -1340,9 +1340,9 @@
                                     >Des produits</a
                                 >
                                 <a
-                                    href="./service.html"
+                                    href="./services.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Service</a
+                                    >Services</a
                                 >
                                 <a
                                     href="#À propos de nous"
@@ -1572,7 +1572,7 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="./service.html"
+                                href="./services.html"
                                 >خدمة</a
                             >
                             <a
@@ -2026,7 +2026,7 @@
                                     >منتجاتنا</a
                                 >
                                 <a
-                                    href="./service.html"
+                                    href="./services.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >خدمة</a
                                 >
