--- a/services.html
+++ b/services.html
@@ -185,8 +185,8 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="./service.html"
-                                >Service</a
+                                href="./services.html"
+                                >Services</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
@@ -472,9 +472,9 @@
                                     >Products</a
                                 >
                                 <a
-                                    href="./service.html"
+                                    href="./services.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Service</a
+                                    >Services</a
                                 >
                                 <a
                                     href="#about-us"
@@ -712,8 +712,8 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="./service.html"
-                                >Service</a
+                                href="./services.html"
+                                >Services</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
@@ -988,9 +988,9 @@
                                     >Des produits</a
                                 >
                                 <a
-                                    href="./service.html"
+                                    href="./services.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >Service</a
+                                    >Services</a
                                 >
                                 <a
                                     href="#À propos de nous"
@@ -1220,7 +1220,7 @@
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="./service.html"
+                                href="./services.html"
                                 >خدمة</a
                             >
                             <a
@@ -1494,7 +1494,7 @@
                                     >منتجاتنا</a
                                 >
                                 <a
-                                    href="./service.html"
+                                    href="./services.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >خدمة</a
                                 >
