--- a/services.html
+++ b/services.html
@@ -765,7 +765,7 @@
                         <p class="lg:text-3xl mt-6 text-gray-200">
                             Buvez d'eau pure sans aucun gaspillage
                         </p>
-                        <a href="#buy">
+                        <a href="#Acheter">
                             <button
                                 class="mt-16 bg-blue-600 px-6 py-2.5 text-center text-sm font-semibold capitalize leading-5 text-white hover:bg-blue-500 focus:outline-none lg:mx-0 lg:w-auto"
                             >
