--- a/services.html
+++ b/services.html
@@ -1221,7 +1221,7 @@
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
                                 href="./services.html"
-                                >خدمة</a
+                                >خدمات</a
                             >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
@@ -1496,7 +1496,7 @@
                                 <a
                                     href="./services.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >خدمة</a
+                                    >خدمات</a
                                 >
                                 <a
                                     href="#عنا"
