--- a/index.html
+++ b/index.html
@@ -1562,7 +1562,7 @@
                         >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="#"
+                                href="https://techmaa57.com/index.html"
                                 >الرئيسية</a
                             >
                             <a
