--- a/services.html
+++ b/services.html
@@ -1210,7 +1210,7 @@
                         >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="#"
+                                href="./index.html"
                                 >الرئيسية</a
                             >
                             <a
@@ -1484,7 +1484,7 @@
                                 class="mt-5 flex flex-col items-start space-y-2"
                             >
                                 <a
-                                    href="#"
+                                    href="./index.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >الرئيسية</a
                                 >
