--- a/index.html
+++ b/index.html
@@ -1562,7 +1562,7 @@
                         >
                             <a
                                 class="transform text-gray-200 transition-colors duration-300 hover:text-blue-500 font-semibold lg:mx-4"
-                                href="https://techmaa57.com/index.html"
+                                href="./index.html"
                                 >الرئيسية</a
                             >
                             <a
@@ -2016,7 +2016,7 @@
                                 class="mt-5 flex flex-col items-start space-y-2"
                             >
                                 <a
-                                    href="#"
+                                    href="./index.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >الرئيسية</a
                                 >
