--- a/store.html
+++ b/store.html
@@ -2665,7 +2665,7 @@
                                 class="mt-5 flex flex-col items-start space-y-2"
                             >
                                 <a
-                                    href="#"
+                                    href="./index.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >الرئيسية</a
                                 >
