--- a/story.html
+++ b/story.html
@@ -995,7 +995,7 @@ By 2040, roughly 1 in 4 children worldwide will be living in areas of extremely 
                                 class="mt-5 flex flex-col items-start space-y-2"
                             >
                                 <a
-                                    href="#"
+                                    href="./index.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
                                     >الرئيسية</a
                                 >
