--- a/services.html
+++ b/services.html
@@ -270,7 +270,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Buy water purifier for kitchen faucet
+                                Request A Service In Water Field
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -345,37 +345,7 @@
                                     onsubmit="sendmail(event, 'en')"
                                 >
                                     <div
-                                        class="grid grid-cols-1 md:grid-cols-2 gap-6"
-                                    >
-                                        <div class="flex-1">
-                                            <label
-                                                class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >Product</label
-                                            >
-                                            <input
-                                                id="product_en"
-                                                type="text"
-                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="water purifier for kitchen faucet"
-                                                disabled
-                                            />
-                                        </div>
-
-                                        <div class="flex-1">
-                                            <label
-                                                class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >Quantity</label
-                                            >
-                                            <input
-                                                id="quantity_en"
-                                                type="number"
-                                                placeholder="Quantity"
-                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                required
-                                            />
-                                        </div>
-
-                                        <div class="flex-1">
+                                        class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
                                                 >Full Name</label
