--- a/services.html
+++ b/services.html
@@ -350,13 +350,13 @@
                                         <div class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >Service</label
+                                                >Product</label
                                             >
                                             <input
                                                 id="product_en"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="Plumber"
+                                                value="water purifier for kitchen faucet"
                                                 disabled
                                             />
                                         </div>
