--- a/services.html
+++ b/services.html
@@ -350,13 +350,13 @@
                                         <div class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >Product</label
+                                                >Field</label
                                             >
                                             <input
                                                 id="product_en"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="water purifier for kitchen faucet"
+                                                value="Water"
                                                 disabled
                                             />
                                         </div>
@@ -364,14 +364,14 @@
                                         <div class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >Quantity</label
+                                                >Service</label
                                             >
                                             <input
                                                 id="quantity_en"
-                                                type="number"
-                                                placeholder="Quantity"
-                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                required
+                                                type="text"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                value="Plumber"
+                                                disabled
                                             />
                                         </div>
 
