--- a/services.html
+++ b/services.html
@@ -1716,9 +1716,9 @@
                     address +
                     '<br>City: ' +
                     city +
-                    '<br><br>Product: ' +
+                    '<br><br>Field: ' +
                     Field +
-                    '<br>Quantity: ' +
+                    '<br>Service: ' +
                     Service +
                     '<br><br>Message: ' +
                     message;
