--- a/services.html
+++ b/services.html
@@ -462,7 +462,7 @@
                                         type="submit"
                                         class="mt-6 w-full transform rounded-md bg-blue-600 px-6 py-3 text-sm font-medium capitalize tracking-wide text-white transition-colors duration-300 hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-50"
                                     >
-                                        Order Now
+                                        Send
                                     </button>
                                 </form>
                             </div>
@@ -817,7 +817,7 @@
             </section>
 
             <section
-                class="formservice-banner min-h-screen from-blue-800 via-blue-700 to-blue-600"
+                class="form-banner min-h-screen from-blue-800 via-blue-700 to-blue-600"
             >
                 <div
                     class="container mx-auto flex min-h-screen flex-col px-6 py-12"
@@ -827,7 +827,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                            demander un service dans le domaine d'eau
+                                Acheter water purifier-Purificateur d'eau pour robinet de cuisine
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -905,7 +905,33 @@
                                     <div
                                         class="grid grid-cols-1 md:grid-cols-2 gap-6"
                                     >
-                                        
+                                        <div class="flex-1">
+                                            <label
+                                                class="mb-2 block text-sm text-gray-700 font-medium"
+                                                >Produit</label
+                                            >
+                                            <input
+                                                id="product_fr"
+                                                type="text"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                value="water purifier-Purificateur d'eau pour robinet de cuisine"
+                                                disabled
+                                            />
+                                        </div>
+
+                                        <div class="flex-1">
+                                            <label
+                                                class="mb-2 block text-sm text-gray-700 font-medium"
+                                                >Quantité</label
+                                            >
+                                            <input
+                                                id="quantity_fr"
+                                                type="number"
+                                                placeholder="Quantité"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                required
+                                            />
+                                        </div>
 
                                         <div class="flex-1">
                                             <label
@@ -935,7 +961,19 @@
                                             />
                                         </div>
 
-                                        
+                                        <div class="flex-1">
+                                            <label
+                                                class="mb-2 block text-sm text-gray-700 font-medium"
+                                                >Adresse e-mail</label
+                                            >
+                                            <input
+                                                id="email_fr"
+                                                type="email"
+                                                placeholder="Adresse e-mail"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                required
+                                            />
+                                        </div>
 
                                         <div class="flex-1">
                                             <label
@@ -982,7 +1020,7 @@
                                         type="submit"
                                         class="mt-6 w-full transform rounded-md bg-blue-600 px-6 py-3 text-sm font-medium capitalize tracking-wide text-white transition-colors duration-300 hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-50"
                                     >
-                                    envoyer
+                                        Commandez maintenant
                                     </button>
                                 </form>
                             </div>
