--- a/services.html
+++ b/services.html
@@ -827,7 +827,7 @@
                             <h1
                                 class="text-2xl font-semibold capitalize lg:text-3xl"
                             >
-                                Acheter water purifier-Purificateur d'eau pour robinet de cuisine
+                                Demander un service dans le domaine d'eau
                             </h1>
 
                             <p class="mt-6 max-w-xl">
@@ -908,13 +908,13 @@
                                         <div class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >Produit</label
+                                                >Domaine</label
                                             >
                                             <input
                                                 id="product_fr"
                                                 type="text"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                value="water purifier-Purificateur d'eau pour robinet de cuisine"
+                                                value="L'eau"
                                                 disabled
                                             />
                                         </div>
@@ -922,14 +922,14 @@
                                         <div class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >Quantité</label
+                                                >Service</label
                                             >
                                             <input
                                                 id="quantity_fr"
-                                                type="number"
-                                                placeholder="Quantité"
-                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
-                                                required
+                                                type="text"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                value="Plombier"
+                                                disabled
                                             />
                                         </div>
 
@@ -1020,7 +1020,7 @@
                                         type="submit"
                                         class="mt-6 w-full transform rounded-md bg-blue-600 px-6 py-3 text-sm font-medium capitalize tracking-wide text-white transition-colors duration-300 hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-50"
                                     >
-                                        Commandez maintenant
+                                        Envoyer
                                     </button>
                                 </form>
                             </div>
