--- a/services.html
+++ b/services.html
@@ -1363,7 +1363,7 @@
             </section>
 
             <section
-                class="formservice-banner min-h-screen from-blue-800 via-blue-700 to-blue-600"
+                class="form-banner min-h-screen from-blue-800 via-blue-700 to-blue-600"
             >
                 <div
                     class="container mx-auto flex min-h-screen flex-col px-6 py-12"
@@ -1381,7 +1381,8 @@
                             </p>
 
                             <p class="mt-24 font-semibold max-w-xl">
-                                في حالة وجود أي استفسار ، يمكنك التواصل معنا عبر:
+                                في حالة وجود أي استفسار ، يمكنك التواصل معنا
+                                عبر:
                             </p>
 
                             <div class="mt-6 space-y-4">
@@ -1449,17 +1450,43 @@
                                     <div
                                         class="grid grid-cols-1 md:grid-cols-2 gap-6"
                                     >
-                                        
+                                        <div class="flex-1">
+                                            <label
+                                                class="mb-2 block text-sm text-gray-700 font-medium"
+                                                >المجال</label
+                                            >
+                                            <input
+                                                id="product_ar"
+                                                type="text"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                value="الماء"
+                                                disabled
+                                            />
+                                        </div>
 
                                         <div class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >الاسم الكامل</label
+                                                >الخدمة</label
+                                            >
+                                            <input
+                                                id="quantity_ar"
+                                                type="text"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                value="سباك"
+                                                disabled
+                                            />
+                                        </div>
+
+                                        <div class="flex-1">
+                                            <label
+                                                class="mb-2 block text-sm text-gray-700 font-medium"
+                                                >االسم الكامل</label
                                             >
                                             <input
                                                 id="name_ar"
                                                 type="text"
-                                                placeholder="الاسم الكامل"
+                                                placeholder="االسم الكامل"
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
                                                 required
                                             />
@@ -1479,7 +1506,19 @@
                                             />
                                         </div>
 
-                                        
+                                        <div class="flex-1">
+                                            <label
+                                                class="mb-2 block text-sm text-gray-700 font-medium"
+                                                >عنوان البريد االلكترونى</label
+                                            >
+                                            <input
+                                                id="email_ar"
+                                                type="email"
+                                                placeholder="عنوان البريد االلكترونى"
+                                                class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
+                                                required
+                                            />
+                                        </div>
 
                                         <div class="flex-1">
                                             <label
@@ -1526,7 +1565,7 @@
                                         type="submit"
                                         class="mt-6 w-full transform rounded-md bg-blue-600 px-6 py-3 text-sm font-medium capitalize tracking-wide text-white transition-colors duration-300 hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-50"
                                     >
-                                    إرسال
+                                        ارسال
                                     </button>
                                 </form>
                             </div>
