--- a/services.html
+++ b/services.html
@@ -1481,12 +1481,12 @@
                                         <div class="flex-1">
                                             <label
                                                 class="mb-2 block text-sm text-gray-700 font-medium"
-                                                >االسم الكامل</label
+                                                >الاسم الكامل </label
                                             >
                                             <input
                                                 id="name_ar"
                                                 type="text"
-                                                placeholder="االسم الكامل"
+                                                placeholder="الاسم الكامل "
                                                 class="mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm text-gray-700 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500"
                                                 required
                                             />
