--- a/MiniFaucetWaterFilter.html
+++ b/MiniFaucetWaterFilter.html
@@ -673,7 +673,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >QatraLik</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Drink pure water without any waste
@@ -1399,7 +1399,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >QatraLik</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Buvez de l'eau pure sans aucun gaspillage
@@ -2123,7 +2123,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >تيكما</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 اشرب الماء النقي بدون أي هدر
