--- a/360DegreeSwivelFaucet.html
+++ b/360DegreeSwivelFaucet.html
@@ -851,7 +851,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >QatraLik</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Drink pure water without any waste
@@ -1756,7 +1756,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >QatraLik</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Buvez de l'eau pure sans aucun gaspillage
@@ -2660,7 +2660,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >تيكما</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 اشرب الماء النقي بدون أي هدر
