--- a/SuperStrongWaterproofAdhesiveTape.html
+++ b/SuperStrongWaterproofAdhesiveTape.html
@@ -671,7 +671,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >QatraLik</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Drink pure water without any waste
@@ -1397,7 +1397,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >QatraLik</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Buvez de l'eau pure sans aucun gaspillage
@@ -2118,7 +2118,7 @@
                             <a
                                 href="./index.html"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >تيكما</a
+                                >قطرة ليك</a
                             >
                             <p class="mt-5 text-gray-700">
                                 اشرب الماء النقي بدون أي هدر
