--- a/story.html
+++ b/story.html
@@ -343,7 +343,7 @@ By 2040, roughly 1 in 4 children worldwide will be living in areas of extremely 
                             <a
                                 href="#"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >قطرة ليك</a
+                                >QatraLik</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Drink pure water without any waste
@@ -665,7 +665,7 @@ By 2040, roughly 1 in 4 children worldwide will be living in areas of extremely 
                             <a
                                 href="#"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >قطرة ليك</a
+                                >QatraLik</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Buvez de l'eau pure sans aucun gaspillage
