--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                             <a
                                 href="#"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >قطرة ليك</a
+                                >QatraLik</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Drink pure water without any waste
@@ -1314,7 +1314,7 @@
                             <a
                                 href="#"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >قطرة ليك</a
+                                >QatraLik</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Buvez de l'eau pure sans aucun gaspillage
