--- a/store.html
+++ b/store.html
@@ -842,7 +842,7 @@
                             <a
                                 href="#"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >قطرة ليك</a
+                                >QatraLik</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Drink pure water without any waste
@@ -1756,7 +1756,7 @@
                             <a
                                 href="#"
                                 class="text-2xl font-bold text-gray-800 transition-colors duration-300 hover:text-gray-700"
-                                >قطرة ليك</a
+                                >QatraLik</a
                             >
                             <p class="mt-5 text-gray-700">
                                 Buvez de l'eau pure sans aucun gaspillage
