--- a/services.html
+++ b/services.html
@@ -243,7 +243,7 @@
                 <div class="mx-auto px-6 py-48 text-center">
                     <div class="mx-auto max-w-4xl">
                         <h1 class="text-3xl font-medium text-white lg:text-6xl">
-                            TECHMAA
+                            QatraLik
                         </h1>
                         <p class="lg:text-3xl mt-6 text-gray-200">
                             Drink pure water without any waste
@@ -800,7 +800,7 @@
                 <div class="mx-auto px-6 py-48 text-center">
                     <div class="mx-auto max-w-4xl">
                         <h1 class="text-3xl font-medium text-white lg:text-6xl">
-                            TECHMAA
+                            QatraLik
                         </h1>
                         <p class="lg:text-3xl mt-6 text-gray-200">
                             Buvez d'eau pure sans aucun gaspillage
