--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="mx-auto px-6 py-48 text-center">
                     <div class="mx-auto max-w-4xl">
                         <h1 class="text-3xl font-medium text-white lg:text-6xl">
-                            TECHMAA
+                            QatraLik
                         </h1>
                         <p class="lg:text-3xl mt-6 text-gray-200">
                             Drink pure water without any waste
@@ -941,7 +941,7 @@
                 <div class="mx-auto px-6 py-48 text-center">
                     <div class="mx-auto max-w-4xl">
                         <h1 class="text-3xl font-medium text-white lg:text-6xl">
-                            TECHMAA
+                            QatraLik
                         </h1>
                         <p class="lg:text-3xl mt-6 text-gray-200">
                             Buvez de l'eau pure sans aucun gaspillage
