--- a/services.html
+++ b/services.html
@@ -1346,7 +1346,7 @@
                 <div class="mx-auto px-6 py-48 text-center">
                     <div class="mx-auto max-w-4xl">
                         <h1 class="text-3xl font-medium text-white lg:text-6xl">
-                            تيكما
+                            قطرة ليك
                         </h1>
                         <p class="lg:text-3xl mt-6 text-gray-200">
                             اشرب الماء النقي بدون أي هدر
